--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.0.0)
 project(nikfemm)
 add_subdirectory(lib/nikfemm)
 add_subdirectory(examples/test)
+add_subdirectory(examples/mtest)
