--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ project(nikfemm)
 add_subdirectory(lib/nikfemm)
 add_subdirectory(examples/test)
 add_subdirectory(examples/mtest)
+add_subdirectory(examples/integration_test)
