--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(lib/nikfemm)
 add_subdirectory(examples/test)
 add_subdirectory(examples/mtest)
 add_subdirectory(examples/integration_test)
+add_subdirectory(examples/magnet_dynamic_simulation)
