--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(examples/test)
 add_subdirectory(examples/mtest)
 add_subdirectory(examples/integration_test)
 add_subdirectory(examples/magnet_dynamic_simulation)
+add_subdirectory(examples/gradient_descent_design_optimization)
