--- a/lib/nikfemm/CMakeLists.txt
+++ b/lib/nikfemm/CMakeLists.txt
@@ -4,7 +4,7 @@ project(nikfemm LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-# set(CMAKE_BUILD_TYPE debug)
+set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -mavx")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
