--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(examples/mtest)
 add_subdirectory(examples/integration_test)
 add_subdirectory(examples/magnet_dynamic_simulation)
 add_subdirectory(examples/gradient_descent_design_optimization)
+add_subdirectory(examples/current_density_test)
