--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(examples/integration_test)
 add_subdirectory(examples/magnet_dynamic_simulation)
 add_subdirectory(examples/gradient_descent_design_optimization)
 add_subdirectory(examples/current_density_test)
+add_subdirectory(examples/multilayer_current_density_test)
