--- a/lib/nikfemm/CMakeLists.txt
+++ b/lib/nikfemm/CMakeLists.txt
@@ -19,42 +19,14 @@ include_directories("${NIKFEMM_INCLUDE_DIR}")
 
 add_library(nikfemm SHARED ${NIKFEMM_SRCS} ${NIKFEMM_INCLUDE_DIR})
 
-# add opencv
-find_package(OpenCV REQUIRED)
-include_directories(${OpenCV_INCLUDE_DIRS})
-target_link_libraries(nikfemm ${OpenCV_LIBS})
-
-# add openmp
-find_package(OpenMP REQUIRED)
-if (OPENMP_FOUND)
-    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+# add opencv if OPENCV option is set
+option(OPENCV "Use OpenCV" OFF)
+if (OPENCV)
+    add_definitions(-DNIKFEMM_USE_OPENCV)
+    find_package(OpenCV REQUIRED)
+    include_directories(${OpenCV_INCLUDE_DIRS})
+    target_link_libraries(nikfemm ${OpenCV_LIBS})
 endif()
-
-# shader compiler helper
-function(add_spirv_shader INPUT_FILE OUTPUT_FILE)
-    add_custom_command(
-            OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${OUTPUT_FILE}
-            COMMAND glslc ${INPUT_FILE} -o ${CMAKE_CURRENT_BINARY_DIR}/${OUTPUT_FILE}
-            MAIN_DEPENDENCY ${INPUT_FILE}
-            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    )
-endfunction()
-
-# add vulkan and if found set the variable
-find_package(Vulkan)
-if (Vulkan_FOUND)
-    set (NIK_VULKAN_FOUND TRUE)
-    include_directories(${Vulkan_INCLUDE_DIRS})
-    target_link_libraries(nikfemm ${Vulkan_LIBRARIES})
-endif()
-
-# get Triangle from lib
-# unset TRILIBRARY variable
-unset(TRILIBRARY)
-add_subdirectory(lib/triangle)
-target_link_libraries(nikfemm triangle)
 
 target_include_directories (nikfemm PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
