--- a/lib/nikfemm/CMakeLists.txt
+++ b/lib/nikfemm/CMakeLists.txt
@@ -20,7 +20,9 @@ include_directories("${NIKFEMM_INCLUDE_DIR}")
 add_library(nikfemm SHARED ${NIKFEMM_SRCS} ${NIKFEMM_INCLUDE_DIR})
 add_library(nikfemm_static STATIC ${NIKFEMM_SRCS} ${NIKFEMM_INCLUDE_DIR})
 
-set(NIKFEMM_USE_OPENCV ON)
+if(NOT NIKFEMM_USE_OPENCV)
+    set(NIKFEMM_USE_OPENCV ON)
+endif()
 
 # add opencv if NIKFEMM_USE_OPENCV option is set
 if (NIKFEMM_USE_OPENCV)
